--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,23 @@
+buildscript {
+    repositories {
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
+    }
+    dependencies {
+        classpath 'com.adarshr:gradle-test-logger-plugin:3.2.0'
+    }
+}
+
+
 plugins {
     id 'java'
+    id 'com.adarshr.test-logger' version '3.2.0'
+    id 'jacoco'
 }
+
+apply plugin: 'com.adarshr.test-logger'
+
 
 group 'hexlet.code'
 version '1.0-SNAPSHOT'
@@ -9,10 +26,13 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
+
+
 
 test {
     useJUnitPlatform()
@@ -20,4 +40,10 @@ test {
 
 compileJava {
     options.release = 17
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
 }
